# rich-uncle-pennybags-bot

./: .gitignore  Cargo.toml  Coins.toml  LICENSE  coins.toml  readme.md
scripts/: deploy.sh  install.sh  update_coins.sh
src/: bot.rs  error.rs  exchange.rs  lib.rs  main.rs  model.rs  routes.rs  telegram.rs
src/exchange/: api.rs  error.rs  mod.rs  types.rs
src/exchange/implementation/: bitfinex.rs  coinmarketcap.rs  mod.rs
src/model/: mod.rs  toml.rs
src/telegram/: api.rs  error.rs  mod.rs  model.rs  types.rs
