[package]
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
name = "rich-uncle-pennybags-bot"
version = "0.3.0"

[dependencies]
dotenv = "0.10.1"
dotenv_macros = "0.10.0"
heck = "0.3.0"
reqwest = "0.8.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
serde = "1.0.25"
serde_derive = "1.0.25"
serde_json = "1.0.8"
toml = "0.4.5"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "v0.3"
default-features = false
features = ["json"]
version = "0.3.5"

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }
