[package]
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
name = "rich-uncle-pennybags-bot"
version = "0.3.0"
[dependencies]
dotenv = "0.10.1"
dotenv_macros = "0.10.0"
heck = "0.3.0"
rand = "0.4.2"
reqwest = "0.8.2"
serde = "1.0.25"
serde_derive = "1.0.25"
serde_json = "1.0.8"
toml = "0.4.5"

[dependencies.rocket]
branch = "v0.3"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_codegen]
branch = "v0.3"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
branch = "v0.3"
default-features = false
features = ["json"]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.3.5"
[patch.crates-io.ring]
branch = "v0.11"
git = "https://github.com/SergioBenitez/ring"
